docs: update links

--- a/pages/index.html
+++ b/pages/index.html
@@ -36,6 +36,7 @@
     <h2>Links</h2>
 
     <ul>
+      <li><a href="https://www.pouet.net/prod.php?which=88544">🔦 Pouet, Prod page</a></li>
       <li><a href="https://www.youtube.com/watch?v=eZjd4aLmfus">🎥 YouTube, Captured stream</a></li>
       <li><a href="https://github.com/FMS-Cat/condition">💻 Source code (GitHub)</a></li>
       <li><a href="https://twitter.com/FMS_Cat">🐣 Twitter (@FMS_Cat), follow me!</a></li>
